--- a/intro.html
+++ b/intro.html
@@ -1,3 +1,16 @@
-<h1>Hey. I'm a big heading</h1>
-<p>This is a paragraph</p>
-<a href="https://www.youtube.com/watch?v=5i3U90PNiRE&list=RD5i3U90PNiRE&start_radio=1" target="_blank" title="Going to youtube: sunflower">sunflower</a>
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Dev1ze</title>
+    </head>
+    <body>
+        <div>
+            <h1>Spider-Man: Into the Spider-Verse</h1>
+        <p>This is a <b>paragraph<b></p>
+        <a href="https://www.youtube.com/watch?v=5i3U90PNiRE&list=RD5i3U90PNiRE&start_radio=1"
+        target="_blank" title="Going to youtube: sunflower">sunflower</a>
+        <p>My name is: <br> Miles morales</p>
+        </div>
+        <img src="img/meme.png">  
+    </body>
+</html>
