--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- Footer content -->
     <footer>
-        <p>this site was created during tap <a href="https://taptapkaboom.com" target="_blank">tap kaboom class</a> &copy; wendell</p>
+        <p>this site was created by <a href="https://www.youtube.com/channel/UCiEiSxTaLFpsABPvhOVJnMw" target="_blank">wendell</a> &copy; Dev1ze</p>
     </footer>
 
 </body>
